--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <tr>
                         <td>
                         <div class="form-area">
-                                <form>
+                                <form action="./" method="post">
                                     <table cellspacing="30">
                                         <tr>
                                             <td><label class="label-style">Name</label></td>
